--- a/.actrc
+++ b/.actrc
@@ -1,1 +1,6 @@
 --pull=false
+--env https_proxy=http://proxycz.oskarmobil.cz:3128
+--env http_proxy=http://proxycz.oskarmobil.cz:3128
+--env HTTP_PROXY=http://proxycz.oskarmobil.cz:3128
+--env HTTPS_PROXY=http://proxycz.oskarmobil.cz:3128
+--env NO_PROXY=172.22.17.42
