--- a/actions/setup-maven-build/action.yml
+++ b/actions/setup-maven-build/action.yml
@@ -23,6 +23,11 @@ runs:
         distribution: ${{ inputs.java-distribution }}
         java-version: ${{ inputs.java-version }}
         #cache: 'maven' ## FIXME maven cache disabled
+    - name: "Set git user"
+      shell: bash
+      run: |
+        git config --global user.email "petr.steckovic@vodafone.com"
+        git config --global user.name "Petr Steckovic"
     - name: "Install Maven"
       shell: bash
       run: |
